examples/errors/name_resolution/E0200_undefined_variable.hd
fn main(): void {
    let x = y + 1;
    return;
}
